<resources>
    <string name="app_name">Calculator</string>
    <string name="karpushinkirillgr303">KarpushinKirillGr303</string>
    <string name="a">A:</string>
    <string name="b">B:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="multi">*</string>
    <string name="result">Result:</string>
    <string name="sqrt">Sqrt</string>
    <string name="tg">Tg</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="pow">Pow</string>
</resources>